--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,41 @@ body {
 }
 
 /* set map, body, and html to 100% of the screen size */
-#map,
-body,
+#body,
 html {
-  height: 800px;
+  height: 100%;
+}
+
+#map {
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+  width: 960px;
+  height: 500px;
+  position: relative;
+}
+#canvas {
+}
+#canvas-svg {
+}
+.land {
+  fill: #222;
+}
+.boundary {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1px;
+}
+#tooltip-container {
+  position: absolute;
+  background-color: #fff;
+  color: #000;
+  padding: 10px;
+  border: 1px solid;
+  display: none;
+}
+.tooltip_key {
+  font-weight: bold;
+}
+.tooltip_value {
+  margin-left: 20px;
+  float: right;
 }
