--- a/templates/Index.html
+++ b/templates/Index.html
@@ -6,20 +6,11 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-  <!-- Leaflet CSS & JS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
-  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-  crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
-  integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-  crossorigin=""></script>
-
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron jumbotron-fluid text-center">
@@ -27,26 +18,37 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="well">
           <h4>Country or Area:</h4>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="Country" onchange="countryChanged(this.value)"></select>
         </div>
       </div>
-      <div class="col-md-10">
-        <div id="line"></div>
+      <div class="col-md-4">
+        <div class="well">
+          <h4>Category:</h4>
+          <select id="Category" onchange="categoryChanged(this.value)"></select>
+        </div>
+      </div>
+      <div class="col-md-4">
+          <div class="well">
+            <h4>Year:</h4>
+            <select id="Year" onchange="yearChanged(this.value)"></select>
+          </div>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <div id="map"></div>
+      <div id="tooltip-container"></div>
+
+      <div id="canvas-svg"></div>
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!-- API key -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/config.js') }}"></script>
   <!-- JS -->
