--- a/templates/Index.html
+++ b/templates/Index.html
@@ -47,6 +47,9 @@
     
           <div id="canvas-svg"></div>
         </div>
+        <div class="col-md-6">
+          <div id="stacked-area-svg"></div>
+        </div>
       </div>
   </div>
 
