--- a/templates/Index.html
+++ b/templates/Index.html
@@ -60,12 +60,38 @@
       </div>
     </div>
   </div>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="well text-center">
+          <h4>Country:</h4>
+          
+          <select id="pie_country" onchange="pie_countryChanged(this.value)">
+            <option value="none">---</option></select>
+        </div>
+      </div>
+      <div class="col-md-6">
+          <div class="well text-center">
+            <h4>Year:</h4>
+            <select id="pie_year" onchange="pie_yearChanged(this.value)">
+              <option value="none">---</option></select>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div style = "text-align:center" id="pie_chart"></div>
+    </div>
+  </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script src="https://d3js.org/d3.v4.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- API key -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/config.js') }}"></script>
   <!-- JS -->
