--- a/templates/Index.html
+++ b/templates/Index.html
@@ -41,25 +41,7 @@
         </div>
       </div>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="well text-center">
-          <h4>Country or Area:</h4>
-            <select id="Country" onchange="countryChanged(this.value)">
-            <option value="none">---</option>
-            </select>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div id="stacked-area-svg"></div>
-      </div>
-    </div>
-  </div>
+  
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -87,9 +69,29 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="well text-center">
+        <h4>Country or Area:</h4>
+          <select id="Country" onchange="countryChanged(this.value)">
+          <option value="none">---</option>
+          </select>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-center" id="stacked-area-svg"></div>
+    </div>
+  </div>
+</div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
   <script src="https://d3js.org/d3.v4.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- API key -->
