--- a/templates/Index.html
+++ b/templates/Index.html
@@ -91,6 +91,10 @@
   </div>
 </div>
 
+<div id="footer">
+  <p>Group 8</p>
+</div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 <script src="https://d3js.org/d3.v4.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.1.0/topojson.min.js"></script>
