--- a/templates/Index.html
+++ b/templates/Index.html
@@ -17,6 +17,7 @@
         <h1 class="display-4"><font color="black"><b>Energizing the World</b></font></h1>
       </div>
     </div>
+    <h2 class="display-4 subtitle">Global Electricity Production by Category by Year</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="well text-center">
@@ -38,6 +39,7 @@
           <div id="tooltip-container"></div>
     
           <div id="canvas-svg" style="text-align:center;"></div>
+          <h2 class="display-4 subtitle">Country Electricity Production by Year</h2>
         </div>
       </div>
   </div>
@@ -63,6 +65,7 @@
       </div>
     </div>
   </div>
+  
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -70,7 +73,7 @@
     </div>
   </div>
 </div>
-
+<h2 class="display-4 subtitle">Country Electricity Production by Category over Time</h2>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
