--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,13 @@ html {
   background-color: #f5f5f5;
 }
 
+.subtitle{
+  font-family: 'Lobster', cursive;
+  text-align: center;
+  font-size: 40px;
+  padding: 10px;
+ }
+
 #canvas {
 }
 #canvas-svg {
