--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ html {
 }
 
 .subtitle{
-  font-family: 'Lobster', cursive;
+  /* font-family: 'Lobster', cursive; */
   text-align: center;
   font-size: 40px;
   padding: 10px;
